Fix splash with no margins on small screens

--- a/src/components/Splash/Splash.module.css
+++ b/src/components/Splash/Splash.module.css
@@ -1,3 +1,7 @@
+.container {
+  max-width: 90%;
+}
+
 .title {
   font-size: 2.5rem;
 }
